Início da Interface

--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
 </head>
 <body>
     <header>
-        
+        <h1>MKP Cryptography</h1>
     </header>
     <main>
-
+        <div id="encoding">
+            <label>Decoded Text:<br><textarea type="text" name="og-text" id="og-text" class="text-input"  onkeyup="if (this.scrollHeight > this.clientHeight) this.style.height = this.scrollHeight + 'px';"></textarea></label>
+        </div>
+        <div id="decoding">
+            <label>Encoded Text:<input type="text" name="encoded-text" id="encoded-text" class="text-input"></label>
+        </div>
     </main>
     <footer>
 
     </footer>
 </body>
+<script>
+    var textInputs = document.getElementsByClassName("text-input");
+    textInputs.on
+</script>
 </html>
